# icu4rs

./: Cargo.toml  LICENSE-MIT  README.md
src/: lib.rs  version.rs
